--- a/web/html/common/prompt_modal.html
+++ b/web/html/common/prompt_modal.html
@@ -15,7 +15,7 @@
         title: '',
         type: '',
         value: '',
-        okText: '确定',
+        okText: 'Yes',
         visible: false,
         keyEnter(e) {
             if (this.type !== 'textarea') {
@@ -38,7 +38,7 @@
                 title='',
                 type='text',
                 value='',
-                okText='确定',
+                okText='Yes',
                 confirm=() => {},
             }) {
             this.title = title;
