--- a/web/html/xui/form/inbound.html
+++ b/web/html/xui/form/inbound.html
@@ -14,10 +14,10 @@
     </a-form-item>
     <a-form-item>
         <span slot="label">
-            监听 IP
+            Listening IP
             <a-tooltip>
                 <template slot="title">
-                    默认留空即可
+                    Leave blank by default
                 </template>
                 <a-icon type="question-circle" theme="filled"></a-icon>
             </a-tooltip>
@@ -29,10 +29,10 @@
     </a-form-item>
     <a-form-item>
         <span slot="label">
-            总流量(GB)
+            Total(GB)
             <a-tooltip>
                 <template slot="title">
-                    0 表示不限制
+                    0 Means no limit!
                 </template>
                 <a-icon type="question-circle" theme="filled"></a-icon>
             </a-tooltip>
@@ -41,10 +41,10 @@
     </a-form-item>
     <a-form-item>
         <span slot="label">
-            到期时间
+            Expire date
             <a-tooltip>
                 <template slot="title">
-                    留空则永不到期
+                    Leave blank to never expire
                 </template>
                 <a-icon type="question-circle" theme="filled"></a-icon>
             </a-tooltip>
