--- a/web/html/xui/form/protocol/shadowsocks.html
+++ b/web/html/xui/form/protocol/shadowsocks.html
@@ -1,11 +1,11 @@
 {{define "form/shadowsocks"}}
 <a-form layout="inline">
-    <a-form-item label="加密">
+    <a-form-item label="encryption">
         <a-select v-model="inbound.settings.method" style="width: 165px;">
             <a-select-option v-for="method in SSMethods" :value="method">[[ method ]]</a-select-option>
         </a-select>
     </a-form-item>
-    <a-form-item label="密码">
+    <a-form-item label="password">
         <a-input v-model.trim="inbound.settings.password"></a-input>
     </a-form-item>
     <a-form-item label="网络">
