--- a/web/html/xui/form/protocol/vmess.html
+++ b/web/html/xui/form/protocol/vmess.html
@@ -6,7 +6,7 @@
     <a-form-item label="额外 ID">
         <a-input type="number" v-model.number="inbound.settings.vmesses[0].alterId"></a-input>
     </a-form-item>
-    <a-form-item label="禁用不安全加密">
+    <a-form-item label="禁用不安全encryption">
         <a-switch v-model.number="inbound.settings.disableInsecure"></a-switch>
     </a-form-item>
 </a-form>
