--- a/web/html/xui/form/protocol/http.html
+++ b/web/html/xui/form/protocol/http.html
@@ -1,6 +1,6 @@
 {{define "form/http"}}
 <a-form layout="inline">
-    <a-form-item label="用户名">
+    <a-form-item label="username">
         <a-input v-model.trim="inbound.settings.accounts[0].user"></a-input>
     </a-form-item>
     <a-form-item label="password">
