--- a/web/html/xui/form/protocol/shadowsocks.html
+++ b/web/html/xui/form/protocol/shadowsocks.html
@@ -8,7 +8,7 @@
     <a-form-item label="password">
         <a-input v-model.trim="inbound.settings.password"></a-input>
     </a-form-item>
-    <a-form-item label="网络">
+    <a-form-item label="network protocol">
         <a-select v-model="inbound.settings.network" style="width: 100px;">
             <a-select-option value="tcp,udp">tcp+udp</a-select-option>
             <a-select-option value="tcp">tcp</a-select-option>
